# multi-level-split

./: LICENSE.txt  README.md  setup.cfg
src/multi_level_split/: util.py
