[metadata]
name = multi-level-split
version = 0.0.1
author = Lisa Koch
author_email = lisa.koch@uni-tuebingen.de
description = Wrapper around sklearn train test split for multi-level splits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas
    sklearn

[options.packages.find]
where = src